
NEXT
Big updates to the q(), qq(), qr() and qx() ops.

* Added proper Perl brackets behavior to all bracketed q() ops.
* Added support for <> as the brackets.

Added a test.pm file for testing on.